src/objects/DMAPP__AM_Plan_Unit_Question__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Help__c</fullName>
        <label>Help</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan Type</label>
        <referenceTo>DMAPP__Plan_Type__c</referenceTo>
        <relationshipLabel>AM Plan Unit Questions</relationshipLabel>
        <relationshipName>AM_Plan_Unit_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Section_Heading__c</fullName>
        <label>Section Heading</label>
        <picklist>
            <picklistValues>
                <fullName>Section One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AM Plan Unit Question</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AM Plan Unit Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Plan Unit Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>